--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"# project-1-Aulden\"",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node -- main.ts",
+    "start": "nodemon --exec ts-node -- src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
