--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.15.6",
     "nodemon": "^1.18.3",
     "pg": "^7.4.3",
+    "serve-favicon": "^2.5.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   },
