--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "nodemon": "^1.18.3",
+    "password-hash": "^1.2.2",
     "pg": "^7.4.3",
     "serve-favicon": "^2.5.0",
     "ts-node": "^7.0.1",
